fix(style.css): change colors for better visibility

--- a/src/assets/css/page/snippet/card.css
+++ b/src/assets/css/page/snippet/card.css
@@ -49,7 +49,7 @@
   flex-direction: column;
   gap: 20px;
   grid-area: details;
-  background-color: #ddd;
+  background-color: rgba(0,0,0,0.15);
   border-radius: 5px;
   padding: 10px;
 }
